--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,15 @@
 <div class="container">
     <h3>Employee Form</h3>
     <form #form="ngForm" novalidate>
-        <div class="form-group">
-            <label>First Name</label>
-            <input type="text" class="form-control" required name="firstName" 
+        <div class="form-group" [class.has-error]="firstName.invalid && firstName.touched">
+            <label class="control-label" for="firstName">First Name</label>
+            <input #firstName="ngModel" required type="text" pattern="...+" class="form-control" required name="firstName" 
             [(ngModel)] = "model.firstName">
+            <div *ngIf="firstName.invalid && firstName.touched" class="alert alert-danger">
+                First name is required, and must be atleast 3 characters.
+            </div>
         </div>
+
         <div class="form-group">
             <label>Last Name</label>
             <input type="text" class="form-control" required name="lastName" 
@@ -30,11 +34,14 @@
                 [(ngModel)] = "model.paymentType"> 1099
             </label>
         </div>
-        <div class="form-group">
-            <label>Primary Language</label>
+        <div class="form-group" [class.has-error]="hasPrimaryLanguageError">
+            <label class="control-label">Primary Language</label>
             <select class="form-control"
-                name="primaryLanguage"
+                name="primaryLanguage" #primaryLanguage
+                (blur)="validatePrimaryLanguage(primaryLanguage.value)"
+                (change)="validatePrimaryLanguage(primaryLanguage.value)"
                 [(ngModel)]="model.primaryLanguage">
+                <option value="default">Select a Language...</option>
                 <option *ngFor="let lang of languages">{{ lang }}</option>
             </select>
         </div>
@@ -42,9 +49,6 @@
             <label>Date Hired</label>
             <input type="date" class="form-control">
         </div> -->
-        <button class="btn btn-primary" type="submit">Ok</button>
+        <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Ok</button>
     </form>
-    Model : {{ model | json }}
-    <br>
-    Angular : {{ form.value | json }}
 </div>
