--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
-<div class="container">
+<h1 *ngIf="languages.length == 0">Loading...</h1>
+<div class="container" *ngIf="languages.length > 0">
     <h3>Employee Form</h3>
-    <form #form="ngForm" novalidate>
+    <form #form="ngForm" (submit) = "submitForm(form)" novalidate>
         <div class="form-group" [class.has-error]="firstName.invalid && firstName.touched">
             <label class="control-label" for="firstName">First Name</label>
             <input #firstName="ngModel" required type="text" pattern="...+" class="form-control" required name="firstName" 
@@ -12,8 +13,11 @@
 
         <div class="form-group">
             <label>Last Name</label>
-            <input type="text" class="form-control" required name="lastName" 
+            <input  #lastName="ngModel" type="text" class="form-control" pattern="...+"  required name="lastName" 
             [(ngModel)] = "model.lastName">
+            <div *ngIf="lastName.invalid && lastName.touched" class="alert alert-danger">
+                Second name is required, and must be atleast 3 characters.
+            </div>
         </div>
         <div class="checkbox">
             <label>
